--- a/src/components/CustomTable/CustomTable.css
+++ b/src/components/CustomTable/CustomTable.css
@@ -1,10 +1,40 @@
+div 
+{
+    box-sizing: border-box;
+    width: 100%;
+}
+.custom-table-wrapper
+{
+    border: 1.5px solid;
+}
 .custom-table-wrapper .row
 {
     display: flex;
+    border-bottom: 1px solid;
 }
 
 .custom-table-wrapper .cell
 {
-    margin: 5px;
     width: 200px;
+    height: 20px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    border-right: 1px solid;
+}
+
+.custom-table-wrapper .cell:last-child
+{
+    border: none;
+}
+
+.custom-table-wrapper .cell .textbox .text{
+    padding: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    white-space: nowrap;
 }
