--- a/src/components/Examples/ContactList/ContactList.css
+++ b/src/components/Examples/ContactList/ContactList.css
@@ -1,5 +1,19 @@
+html, body{
+    width: 100%;
+    height: 100%;
+    background-color: #f2f2f2;
+}
+
+.contact-list
+{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+
 .contact-list .textbox
 {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
