--- a/src/components/Examples/ContactList/ContactList.css
+++ b/src/components/Examples/ContactList/ContactList.css
@@ -25,3 +25,18 @@ html, body{
     justify-content: center;
     align-items: center;
 }
+
+.contact-list .no-results-found
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #BBB;
+    padding: 20px;
+}
+
+.contact-list .link {
+    color: #2020ec;
+    cursor: pointer;
+}
