--- a/src/components/CustomTable/CustomTable.css
+++ b/src/components/CustomTable/CustomTable.css
@@ -33,7 +33,10 @@ div
 {
     border-right: none;
 }
-
+.custom-table-wrapper .column-title:first-child
+{
+    border-left: 0.5px solid;
+}
 
 .custom-table-wrapper .cell .textbox .text{
     padding: 0 5px;
