Added validation for email field in contact list example

--- a/src/components/TextBox/TextBox.css
+++ b/src/components/TextBox/TextBox.css
@@ -1,6 +1,11 @@
 .textbox {
     display: flex;
     flex-grow: 1;
+    height: 100%;
+}
+
+.textbox.error{
+    background-color: #ef9d9d;
 }
 
 .textbox input
