css added for hover and edit mode

--- a/src/components/Examples/ContactList/ContactList.css
+++ b/src/components/Examples/ContactList/ContactList.css
@@ -26,6 +26,11 @@ html, body{
     align-items: center;
 }
 
+.contact-list .textbox:hover,.contact-list .textbox .input-field
+{
+    background-color: #FFF;
+}
+
 .contact-list .no-results-found
 {
     display: flex;
